--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,10 +21,11 @@ requires = ["hatchling"]
 build-backend = "hatchling.build"
 
 [tool.hatch.build.targets.wheel]
-packages = ["."]
+packages = ["pr_agent"]
 
 [tool.uv]
 dev-dependencies = [
     "pytest>=8.3.0",
     "pytest-asyncio>=0.21.0",
 ]
+
