--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,7 @@ dependencies = [
     "mcp[cli]>=1.0.0",
     "aiohttp>=3.10.0,<4.0.0",
     "requests>=2.32.0,<3.0.0",
+    "pydantic>=2.5.0,<3.0.0",
 ]
 
 [project.optional-dependencies]
@@ -27,5 +28,27 @@ packages = ["pr_agent"]
 dev-dependencies = [
     "pytest>=8.3.0",
     "pytest-asyncio>=0.21.0",
+    "mypy>=1.7.0",
+    "types-requests>=2.32.0",
 ]
+
+[tool.mypy]
+python_version = "3.10"
+warn_return_any = true
+warn_unused_configs = true
+disallow_untyped_defs = false
+disallow_incomplete_defs = false
+check_untyped_defs = true
+no_implicit_optional = true
+warn_redundant_casts = true
+warn_unused_ignores = true
+warn_no_return = true
+strict_optional = true
+
+[[tool.mypy.overrides]]
+module = [
+    "mcp.*",
+    "aiohttp.*",
+]
+ignore_missing_imports = true
 
