--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,7 @@ dependencies = [
     "mcp[cli]>=1.0.0",
     "aiohttp>=3.10.0,<4.0.0",
     "pydantic>=2.5.0,<3.0.0",
+    "pydantic-settings>=2.1.0,<3.0.0",
 ]
 
 [project.optional-dependencies]
@@ -47,6 +48,7 @@ strict_optional = true
 module = [
     "mcp.*",
     "aiohttp.*",
+    "pydantic_settings.*",
 ]
 ignore_missing_imports = true
 
