--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,7 @@ dependencies = [
     "aiohttp>=3.10.0,<4.0.0",
     "pydantic>=2.5.0,<3.0.0",
     "pydantic-settings>=2.1.0,<3.0.0",
+    "asyncpg>=0.29.0,<1.0.0",
 ]
 
 [project.optional-dependencies]
@@ -49,6 +50,7 @@ module = [
     "mcp.*",
     "aiohttp.*",
     "pydantic_settings.*",
+    "asyncpg.*",
 ]
 ignore_missing_imports = true
 
