--- a/.env.example
+++ b/.env.example
@@ -2,5 +2,7 @@ SLACK_WEBHOOK_URL=https://hooks.slack.com/services/YOUR/WEBHOOK/URL
 DATABASE_URL=postgresql://user:password@localhost:5432/pr_agent_db
 GITHUB_WEBHOOK_SECRET=your_webhook_secret_from_github
 LOG_LEVEL=INFO
+LOG_FORMAT=text
+LOG_FILE=
 DB_POOL_SIZE=10
 DB_MAX_OVERFLOW=5
